2005-06-29  Geoffrey Garen  <ggaren@apple.com>

	Patch by Francisco Tolmasky <tolmasky@gmail.com>

	- fixes http://bugzilla.opendarwin.org/show_bug.cgi?id=3667
	Core JavaScript 1.5 Reference:Objects:Array:forEach

	See WebCore Changelog for layout tests added.

        Reviewed by darin.

        * kjs/array_object.cpp:
        (ArrayProtoFuncImp::call):
        * kjs/array_object.h:
        (KJS::ArrayProtoFuncImp::):

2005-06-29  Geoffrey Garen  <ggaren@apple.com>

	Patch contributed by Oliver Hunt <ojh16@student.canterbury.ac.nz>

	-fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3743
	Incorrect error message given for certain calls

	See WebCore Changelog for layout test added.

        Reviewed by mjs.

        * kjs/object.cpp:
        (KJS::ObjectImp::defaultValue):

2005-06-29  Geoffrey Garen  <ggaren@apple.com>

	Rolling out date patch from 6-28-05 because it breaks 
	fast/js/date-parse-test

        Reviewed by NOBODY.

        * kjs/date_object.cpp:
        (formatLocaleDate):
        (DateProtoFuncImp::call):
        (DateObjectImp::construct):
        (KJS::parseDate):
        (ymdhms_to_seconds):
        (isSpaceOrTab):
        (KJS::KRFCDate_parseDate):
        * kjs/date_object.h:
        * tests/mozilla/expected.html:

2005-06-29  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin.

	-fixes http://bugzilla.opendarwin.org/show_bug.cgi?id=3750
	build fails with KJS_VERBOSE set

        * kjs/nodes.cpp: changed debug print statement to use UString
        (VarDeclNode::evaluate):
        * kjs/reference.cpp: ditto
        (KJS::Reference::putValue):

2005-06-28  Geoffrey Garen  <ggaren@apple.com>

	Patch contributed by Carsten Guenther <cguenther@gmail.com>.

	-fixes http://bugzilla.opendarwin.org/show_bug.cgi?id=3477
	some US-centric date formats not parsed by JavaScript (clock at news8austin.com)

        Reviewed by darin.

        * kjs/date_object.cpp:
        (formatLocaleDate):
        (day):
        (dayFromYear):